--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -93,7 +93,7 @@
     .header-wrap {
         background: #2F5390;;
         margin-bottom: 1.45rem;
-        height: 35vh;
+        height: auto;
         display: grid;
         grid-gap: 16px;
     }
@@ -103,6 +103,7 @@
         text-Decoration: none;
         display: flex;
         justify-content: space-around;
+        padding: inherit
 
     }
     .nav-item {
