--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -57,6 +57,7 @@
         grid-row: 2;
         display: grid;
         grid-template-columns: 1fr;
+        grid-template-rows: none;
     }
     .services-services-info {
         grid-column: 0/2;
@@ -71,7 +72,7 @@
     .services-content {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: auto;
+        grid-template-rows: none;
         max-width: 460px;
         grid-gap: 16px;
         padding-right: 12px;
@@ -88,6 +89,7 @@
         display: grid;
         grid-row: 4;
         grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
     }
     .services-info-wrapper {
         grid-column: 1;
