--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -67,6 +67,7 @@ h1 {
         grid-row: 2;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        
 
     }
 
@@ -80,6 +81,7 @@ h1 {
         grid-gap: 12px;
         padding-right: 12px;
         padding-left: 12px;
+        grid-template-rows: none;
     }
     .column-1 {
         grid-column: 1;
@@ -89,8 +91,9 @@ h1 {
     }
     .column-3 {
         display: grid;
-        grid-row: none;
+        grid-row: 2;
         grid-template-columns: none;
+        
     }
     
 }
