--- a/src/styles/new_patients.css
+++ b/src/styles/new_patients.css
@@ -41,6 +41,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         max-width: 750px;
+        grid-template-rows: none;
     }
     .patient-column-1 {
         grid-column: 1;
@@ -49,8 +50,8 @@
         grid-column: 1;
     }
     .patient-column-3 {
-        grid-row: 1; 
         grid-column: 2;
+        grid-template-rows: 1.25fr 1fr;
     }
 
 }
@@ -72,7 +73,7 @@
     }
     .patient-column-3 {
         grid-column: 1;
-        grid-row: 2; 
+        grid-template-rows: 1.25fr 1fr;
     }
     
 }
